# mealtime

./: .gitignore  Cargo.toml  TODO.md
.github/workflows/: rust.yml
db/: menu.db
src/: main.rs  structs.rs  ui.rs
src/api/: database.rs  queries.rs
