[package]
name = "mealtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.32.1"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",            
    "fast-rng",          
    "macro-diagnostics", 
]
